exports[`invalid(1): {\"dependencies\": {\"b\": \"^2.0.0\", \"a\": \"^1.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"b": "^2.0.0", "a": "^1.0.0"}}

`;

exports[`invalid(1): {\"dependencies\": {\"b\": \"^2.0.0\", \"a\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"b": "^2.0.0", "a": "^1.0.0"}}
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Keys in \`dependencies\` should be sorted alphabetically.

Output:
  1 | {"dependencies": {
  2 | 		"a": "^1.0.0",
  3 | 		"b": "^2.0.0"
  4 | 	}}

`;

exports[`invalid(10): {\"scripts\": {\"z\": \"run z\", \"a\": \"run a\"}} 1`] = `

[Input]
Options:
- properties:
    - 'scripts'

Code:
  1 | {"scripts": {"z": "run z", "a": "run a"}}

`;

exports[`invalid(10): {\"scripts\": {\"z\": \"run z\", \"a\": \"run a\"}} 2`] = `

Message:
> 1 | {"scripts": {"z": "run z", "a": "run a"}}
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Keys in \`scripts\` should be sorted alphabetically.

Output:
  1 | {"scripts": {
  2 | 		"a": "run a",
  3 | 		"z": "run z"
  4 | 	}}

`;

exports[`invalid(11): {\"dependencies\": {\"b\": \"^1.0.0\", \"a\": \"^2.0.0\"}, \"devDependencies\": {\"z\": \"^1.0.0\", \"a\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"b": "^1.0.0", "a": "^2.0.0"}, "devDependencies": {"z": "^1.0.0", "a": "^2.0.0"}}

`;

exports[`invalid(11): {\"dependencies\": {\"b\": \"^1.0.0\", \"a\": \"^2.0.0\"}, \"devDependencies\": {\"z\": \"^1.0.0\", \"a\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"b": "^1.0.0", "a": "^2.0.0"}, "devDependencies": {"z": "^1.0.0", "a": "^2.0.0"}}
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Keys in \`dependencies\` should be sorted alphabetically.

Output:
  1 | {"dependencies": {
  2 | 		"a": "^2.0.0",
  3 | 		"b": "^1.0.0"
  4 | 	}, "devDependencies": {"z": "^1.0.0", "a": "^2.0.0"}}

`;

exports[`invalid(11): {\"dependencies\": {\"b\": \"^1.0.0\", \"a\": \"^2.0.0\"}, \"devDependencies\": {\"z\": \"^1.0.0\", \"a\": \"^2.0.0\"}} 3`] = `

Message:
> 1 | {"dependencies": {"b": "^1.0.0", "a": "^2.0.0"}, "devDependencies": {"z": "^1.0.0", "a": "^2.0.0"}}
    |                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Keys in \`devDependencies\` should be sorted alphabetically.

Output:
  1 | {"dependencies": {"b": "^1.0.0", "a": "^2.0.0"}, "devDependencies": {
  2 | 		"a": "^2.0.0",
  3 | 		"z": "^1.0.0"
  4 | 	}}

`;

exports[`invalid(2): {\"devDependencies\": {\"z\": \"^1.0.0\", \"a\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"devDependencies": {"z": "^1.0.0", "a": "^2.0.0"}}

`;

exports[`invalid(2): {\"devDependencies\": {\"z\": \"^1.0.0\", \"a\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"devDependencies": {"z": "^1.0.0", "a": "^2.0.0"}}
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Keys in \`devDependencies\` should be sorted alphabetically.

Output:
  1 | {"devDependencies": {
  2 | 		"a": "^2.0.0",
  3 | 		"z": "^1.0.0"
  4 | 	}}

`;

exports[`invalid(3): {\"peerDependencies\": {\"z\": \"^1.0.0\", \"a\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"z": "^1.0.0", "a": "^2.0.0"}}

`;

exports[`invalid(3): {\"peerDependencies\": {\"z\": \"^1.0.0\", \"a\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"z": "^1.0.0", "a": "^2.0.0"}}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Keys in \`peerDependencies\` should be sorted alphabetically.

Output:
  1 | {"peerDependencies": {
  2 | 		"a": "^2.0.0",
  3 | 		"z": "^1.0.0"
  4 | 	}}

`;

exports[`invalid(4): {\"optionalDependencies\": {\"z\": \"^1.0.0\", \"a\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"optionalDependencies": {"z": "^1.0.0", "a": "^2.0.0"}}

`;

exports[`invalid(4): {\"optionalDependencies\": {\"z\": \"^1.0.0\", \"a\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"optionalDependencies": {"z": "^1.0.0", "a": "^2.0.0"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Keys in \`optionalDependencies\` should be sorted alphabetically.

Output:
  1 | {"optionalDependencies": {
  2 | 		"a": "^2.0.0",
  3 | 		"z": "^1.0.0"
  4 | 	}}

`;

exports[`invalid(5): {\"peerDependenciesMeta\": {\"z\": {}, \"a\": {}}} 1`] = `

[Input]
  1 | {"peerDependenciesMeta": {"z": {}, "a": {}}}

`;

exports[`invalid(5): {\"peerDependenciesMeta\": {\"z\": {}, \"a\": {}}} 2`] = `

Message:
> 1 | {"peerDependenciesMeta": {"z": {}, "a": {}}}
    |                          ^^^^^^^^^^^^^^^^^^ Keys in \`peerDependenciesMeta\` should be sorted alphabetically.

Output:
  1 | {"peerDependenciesMeta": {
  2 | 		"a": {},
  3 | 		"z": {}
  4 | 	}}

`;

exports[`invalid(6): {\n\t\"dependencies\": {\n\t\t\"b\": \"^2.0.0\",\n\t\t\"a\": \"^1.0.0\"\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"dependencies": {
  3 | 		"b": "^2.0.0",
  4 | 		"a": "^1.0.0"
  5 | 	}
  6 | }

`;

exports[`invalid(6): {\n\t\"dependencies\": {\n\t\t\"b\": \"^2.0.0\",\n\t\t\"a\": \"^1.0.0\"\n\t}\n} 2`] = `

Message:
  1 | {
> 2 | 	"dependencies": {
    | 	                ^
> 3 | 		"b": "^2.0.0",
    | ^^^^^^^^^^^^^^^^
> 4 | 		"a": "^1.0.0"
    | ^^^^^^^^^^^^^^^
> 5 | 	}
    | ^^ Keys in \`dependencies\` should be sorted alphabetically.
  6 | }

Output:
  1 | {
  2 | 	"dependencies": {
  3 | 		"a": "^1.0.0",
  4 | 		"b": "^2.0.0"
  5 | 	}
  6 | }

`;

exports[`invalid(7): {\n  \"dependencies\": {\n    \"b\": \"^2.0.0\",\n    \"a\": \"^1.0.0\"\n  }\n} 1`] = `

[Input]
  1 | {
  2 |   "dependencies": {
  3 |     "b": "^2.0.0",
  4 |     "a": "^1.0.0"
  5 |   }
  6 | }

`;

exports[`invalid(7): {\n  \"dependencies\": {\n    \"b\": \"^2.0.0\",\n    \"a\": \"^1.0.0\"\n  }\n} 2`] = `

Message:
  1 | {
> 2 |   "dependencies": {
    |                   ^
> 3 |     "b": "^2.0.0",
    | ^^^^^^^^^^^^^^^^^^
> 4 |     "a": "^1.0.0"
    | ^^^^^^^^^^^^^^^^^
> 5 |   }
    | ^^^ Keys in \`dependencies\` should be sorted alphabetically.
  6 | }

Output:
  1 | {
  2 |   "dependencies": {
  3 |     "a": "^1.0.0",
  4 |     "b": "^2.0.0"
  5 |   }
  6 | }

`;

exports[`invalid(8): {\"dependencies\": {\"zod\": \"^3.0.0\", \"@scope/a\": \"^1.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"zod": "^3.0.0", "@scope/a": "^1.0.0"}}

`;

exports[`invalid(8): {\"dependencies\": {\"zod\": \"^3.0.0\", \"@scope/a\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"zod": "^3.0.0", "@scope/a": "^1.0.0"}}
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Keys in \`dependencies\` should be sorted alphabetically.

Output:
  1 | {"dependencies": {
  2 | 		"@scope/a": "^1.0.0",
  3 | 		"zod": "^3.0.0"
  4 | 	}}

`;

exports[`invalid(9): {\r\n\t\"dependencies\": {\r\n\t\t\"b\": \"^2.0.0\",\r\n\t\t\"a\": \"^1.0.0\"\r\n\t}\r\n} 1`] = `

[Input]
  1 | {
  2 | 	"dependencies": {
  3 | 		"b": "^2.0.0",
  4 | 		"a": "^1.0.0"
  5 | 	}
  6 | }

`;

exports[`invalid(9): {\r\n\t\"dependencies\": {\r\n\t\t\"b\": \"^2.0.0\",\r\n\t\t\"a\": \"^1.0.0\"\r\n\t}\r\n} 2`] = `

Message:
  1 | {
> 2 | 	"dependencies": {
    | 	                ^
> 3 | 		"b": "^2.0.0",
    | ^^^^^^^^^^^^^^^^
> 4 | 		"a": "^1.0.0"
    | ^^^^^^^^^^^^^^^
> 5 | 	}
    | ^^ Keys in \`dependencies\` should be sorted alphabetically.
  6 | }

Output:
  1 | {
  2 | 	"dependencies": {
  3 | 		"a": "^1.0.0",
  4 | 		"b": "^2.0.0"
  5 | 	}
  6 | }

`;
